[project]
name = "sk-zmq"
version = "0.1.4"
description = "Reusable ZMQ client for candle stream subscriptions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pyzmq",
    "orjson",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
]

[tool.setuptools]
packages = ["sk_zmq"]
